--- a/client/index.css
+++ b/client/index.css
@@ -1,20 +1,23 @@
 /* global styles */
 @import 'reset.css';
-@import "typography.css";
+@import 'typography.css';
+@import 'properties.css';
 
 /*.layout and view styling */
 @import '../server/layouts/base.css';
 @import '../server/views/index.css';
+@import '../server//views/projects/projects.css';
 
 /* component styling */
 
 /* @import '../server/components/project-card/project-card.css'; */
 @import '../server/components/contact-button/contact-button.css';
+@import '../server/components/category-filter/category-filter.css';
+@import '../server/components/project-sorting/project-sorting.css';
+@import '../server/components/search-bar/search-bar.css';
+@import '../server/components/full-width-card/full-width-card.css';
 
 
 
-:root{
-  --link-border-color: black;
-}
 
 
