--- a/client/typography.css
+++ b/client/typography.css
@@ -1,20 +1,49 @@
 @font-face {
-  font-family: ;
-  src: url(../client/);
+  font-family: 'Franchise';
+  src: url('/fonts/franchise_bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
+
 body {
   font-family: system-ui, sans-serif;
   font-weight: 400;
 }
 
-.h1 {
-  font-size: 1.5rem;
+h1,h2,h3,h4 {
+  font-family: 'Franchise', Impact, Sans-serif;
+}
+
+h1 {
+  font-size: 4rem;
   margin-bottom: 10px;
   font-weight: 600;
 }
 
-.h2 {
-  font-size: 1.25rem;
+h2 {
+  font-size: 2rem;
   margin-bottom: 10px;
   font-weight: 600;
+}
+
+
+
+p{
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+a, button {
+  text-decoration: none;
+  padding: 1rem;
+  background-color:var(--color-red); 
+  color: var(--color-black);
+  font-weight: 600;
+  border: none;
+  
+  &:hover {
+  background-color: darkred;
+  color:white;
+  transition: 150ms linear}
 }
