--- a/server/views/projects/projects.liquid
+++ b/server/views/projects/projects.liquid
@@ -11,50 +11,13 @@
   {% render '../../components/search-bar/search-bar.liquid' %}
 
   <div class="projects-grid">
-      {% for project in projects %}
-      <div class="project-card {{ project.aspectRatioClass }}">
-          <div class="project-image-wrapper" 
-               style="aspect-ratio: {{ project.featuredImageWidth }} / {{ project.featuredImageHeight }}">
-              <img src="{{ project.projectFeaturedImage }}" 
-                   alt="{{ project.projectname }}"
-                   {% comment %} width="{{ project.featuredImageWidth }}" {% endcomment %}
-                   {% comment %} height="{{ project.featuredImageHeight }}" {% endcomment %}
-                   loading="lazy">
-          </div>
-          
-          <div class="project-info">
-              <h2>{{ project.projectname }}</h2>
-              
-              {% if project.category %}
-              <p class="project-category">{{ project.category }}</p>
-              {% endif %}
-              
-              <div class="project-details">
-                {% assign months_dutch = "Januari,Februari,Maart,April,Mei,Juni,Juli,Augustus,September,Oktober,November,December" | split: "," %}
-                {% assign month_number = project.projectDate | date: "%m" | minus: 1 %}
-                {% assign dutch_month = months_dutch[month_number] %}
+    {% for project in projects %}
 
+    {% render 'server/components/project-card/project-card.liquid', project: project %}
 
-                  {% if project.productionName and project.productionName != "" and project.productionName != nil %}
-                  <p><strong>Productie: </strong> {{ project.productionName }}</p>
-                  {% endif %}
-                  
-                  {% if project.photographerName and project.photographerName != "" and project.photographerName != nil%}
-                  <p><strong>Fotograaf: </strong> {{ project.photographerName }}</p>
-                  {% endif %}
-                  
-                  {% if project.projectDate %}
-                  <p><strong>Datum: </strong>{{ project.projectDate | date: "%e" }} {{ dutch_month }} {{ project.projectDate | date: "%Y" }}</p>
-                  {% endif %}
-                  
-                  {% if project.forSale %}
-                  <span class="for-sale-badge">Te koop</span>
-                  {% endif %}
-              </div>
-          </div>
-      </div>
-      {% endfor %}
+    {% endfor %}
   </div>
+
 </div>
 
 {% endblock %}
