--- a/server/components/project-card/project-card.css
+++ b/server/components/project-card/project-card.css
@@ -37,7 +37,7 @@
     color: white;
     width: 100%;
     margin: auto 0;
-    padding: 0 0 0 0.5em;
+    padding: 0 0 0.5em 0.5em;
     text-transform: uppercase;
     font-size: clamp(1em, 3vw, 1.5em);
     font-weight: 600;
@@ -46,21 +46,35 @@
 
 .catagorie {
   position: absolute;
-  bottom: 40px;
+  bottom: 50px;
   right: 30px;
   z-index: 2;
   transition: transform 0.3s ease;
-
-  background-color: red;
-
+  border: 4px solid black;
   padding: 0.5em;
 
   p {
     color: white;
     text-transform: uppercase;
-    font-size: clamp(1em, 3vw, 1.5em);
+    font-size: clamp(1em, 3vw, 1.3em);
     font-weight: 600;
   }
+}
+
+.catagorie.decor {
+  background-color: blue;
+}
+
+.catagorie.props {
+  background-color: red;
+}
+
+.catagorie.interieur {
+  background-color: green;
+}
+
+.catagorie.nieuws {
+  background-color: gold;
 }
 
 .project-image-wrapper {
