--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -6,6 +6,7 @@
 <div class="container">
   <h1>De Man met de hamer</h1>
 
+{% comment %} hier mag ik niet aanzitten van chris {% endcomment %}
   <a href="/projects">
     <h2>Naar projecten</h2>
   </a>
