--- a/server/components/project-card/project-card.css
+++ b/server/components/project-card/project-card.css
@@ -7,10 +7,8 @@
 .landscape-card,
 .portrait-card {
   position: relative;
-  border-top: 8px solid black;
-  border-bottom: 8px solid black;
-  border-left: 8px solid black;
-  border-right: 8px solid black;
+  border: 16px solid transparent;
+  border-image-source: url("/public/images/beam.png");
 }
 
 .landscape-card {
