--- a/client/index.css
+++ b/client/index.css
@@ -16,3 +16,6 @@
 @import "../server/components/search-bar/search-bar.css";
 /* @import "../server/components/full-width-card/full-width-card.css"; */
 @import "../server/components/project-card/project-card.css";
+@import "../server/components/project-item/project-item.css";
+
+
