--- a/client/index.css
+++ b/client/index.css
@@ -17,5 +17,4 @@
 /* @import "../server/components/full-width-card/full-width-card.css"; */
 @import "../server/components/project-card/project-card.css";
 @import "../server/components/project-item/project-item.css";
-
-
+@import "../server/components/text-slider/text-slider.css";
