--- a/server/components/project-card/project-card.liquid
+++ b/server/components/project-card/project-card.liquid
@@ -11,7 +11,7 @@
                 <h2>{{ project.projectname }}</h2>
             </div>
 
-            <div class='catagorie'>
+            <div class='catagory'>
                 <p>{{ project.category }}</p>
             </div>
         </div>
