--- a/server/views/projects/projects.css
+++ b/server/views/projects/projects.css
@@ -17,7 +17,7 @@ h1 {
   grid-auto-flow: row dense;
   width: 100%;
   height: 200dvh;
-  gap: .6em;
+  gap: 0.6em;
   background-color: black;
 }
 
@@ -37,12 +37,14 @@ h1 {
 }
 
 /* Aspect Ratio Classes */
-.landscape-card, .landscape {
+.landscape-card,
+.landscape {
   grid-row: span 1;
   grid-column: span 2;
 }
 
-.portrait-card, .portrait {
+.portrait-card,
+.portrait {
   grid-row: span 2;
   grid-column: span 1;
 }
@@ -86,7 +88,7 @@ h1 {
 }
 
 /* Category Badge */
-.catagorie {
+.catagory {
   position: absolute;
   bottom: 50px;
   right: 30px;
@@ -96,7 +98,7 @@ h1 {
   padding: 0.5em;
 }
 
-.catagorie p {
+.catagory p {
   color: white;
   text-transform: uppercase;
   font-size: clamp(1em, 3vw, 1.3em);
@@ -104,23 +106,23 @@ h1 {
 }
 
 /* Category Colors */
-.catagorie.decor,
-.category-decor .catagorie {
+.catagory.decor,
+.catagory-decor .catagory {
   background-color: blue;
 }
 
-.catagorie.props,
-.category-props .catagorie {
+.catagory.props,
+.category-props .catagory {
   background-color: red;
 }
 
-.catagorie.interieur,
-.category-interieur .catagorie {
+.catagory.interieur,
+.category-interior .catagory {
   background-color: green;
 }
 
-.catagorie.nieuws,
-.category-nieuws .catagorie {
+.catagory.news,
+.category-news .catagory {
   background-color: gold;
 }
 
@@ -138,10 +140,9 @@ h1 {
   transition: transform 0.3s ease;
 }
 
-.square{
+.square {
   position: relative;
 }
-
 
 /* For Sale Badge */
 .for-sale-badge {
@@ -236,7 +237,7 @@ h1 {
     grid-template-columns: repeat(2, 1fr);
     gap: 0.4em;
   }
-  
+
   /* Adjust spans for mobile */
   .span-3 {
     grid-column: span 2 !important;
@@ -247,7 +248,7 @@ h1 {
   .projects-grid {
     grid-template-columns: 1fr;
   }
-  
+
   .span-2,
   .span-3 {
     grid-column: span 1 !important;
