--- a/server/components/text-slider/text-slider.liquid
+++ b/server/components/text-slider/text-slider.liquid
@@ -2,7 +2,7 @@
 
 <div class="scroller" data-direction="left" data-speed="fast">
     <div class="scroller__inner">
-        <h1>De man met de hamer</h1>
+        <h1>De man met de hamer |</h1>
     </div>
 </div>
 
