--- a/client/index.css
+++ b/client/index.css
@@ -11,9 +11,9 @@
 /* component styling */
 
 /* @import "../server/components/contact-button/contact-button.css"; */
-@import "../server/components/category-filter/category-filter.css";
-@import "../server/components/project-sorting/project-sorting.css";
-@import "../server/components/search-bar/search-bar.css";
+/* @import "../server/components/category-filter/category-filter.css"; */
+/* @import "../server/components/project-sorting/project-sorting.css"; */
+/* @import "../server/components/search-bar/search-bar.css"; */
 /* @import "../server/components/full-width-card/full-width-card.css"; */
 @import "../server/components/project-card/project-card.css";
 @import "../server/components/project-item/project-item.css";
