broken glass component

--- a/client/index.css
+++ b/client/index.css
@@ -18,4 +18,4 @@
 @import "../server/components/project-card/project-card.css";
 @import "../server/components/project-item/project-item.css";
 
-
+@import "../server/components/break-glass/break-glass.css";
