--- a/server/views/index.css
+++ b/server/views/index.css
@@ -1,5 +1,23 @@
 /* curtains */
 body{
+--curtain-pattern: repeating-linear-gradient(90deg,
+#7a0000 0, 
+#c10000 20px,
+#ff0000 40px,
+#910000 60px,
+#3D0000 80px,
+#5a0000 112px,
+#7a0000 120px,
+#c10000 124px,
+#c10000 132px,
+#7a0000 140px, 
+#9b0000 164px,
+#c10000 175px,
+#c10000 180px,
+#c10000 200px,
+#9a0000 212px,
+#7a0000 220px );
+    --custom-easing:cubic-bezier(0.140, 0.935, 0.240, 0.940);
     display: flex;
     flex-direction: column;
     width: 100vw;
@@ -14,37 +32,24 @@ body{
 position: absolute;
 left:0;
 /* background-image: linear-gradient(90deg,rgba(122, 0, 0, 1) 0%, rgba(255, 0, 0, 1) 3%, rgba(122, 0, 0, 1) 8%, rgba(54, 0, 0, 1) 11%, rgba(122, 0, 0, 1) 15%, rgba(255, 0, 0, 1) 17%, rgba(122, 0, 0, 1) 27%, rgba(255, 0, 0, 1) 31%, rgba(122, 0, 0, 1) 35%, rgba(255, 0, 0, 1) 41%, rgba(122, 0, 0, 1) 51%, rgba(255, 0, 0, 1) 57%, rgba(122, 0, 0, 1) 63%, rgba(255, 0, 0, 1) 70%, rgba(122, 0, 0, 1) 77%, rgba(255, 0, 0, 1) 83%, rgba(122, 0, 0, 1) 87%, rgba(255, 0, 0, 1) 93%, rgba(122, 0, 0, 1) 96%, rgba(255, 0, 0, 1) 100%); */
-background-color: green;
+background-image: var(--curtain-pattern);
 width:50vw;
 height:100vh;
 z-index: 3;
-animation: --curtain-left-open 2s var(--custom-easing) forwards 2s;
+animation: curtain-left-open 500ms var(--custom-easing) forwards 2s;
 }
 
 .curtain-right {
 position: absolute;
 right:0;
-
-background-image: repeating-linear-gradient(90deg,
-#7a0000 0,
-#c10000 40px,
-#ff0000 80px,
-#910000 102px, 
-#3D0000 124px,
-#5a0000 155px,
-#7a0000 186px,
-#c10000 216px,
-#c10000 283px,
-#7a0000 320px
-);
-
+background-image: var(--curtain-pattern);
 width:50vw;
 height:100vh;
 z-index: 3;
-animation: --curtain-right-open 2s var(--custom-easing) forwards 2s;
+animation: curtain-right-open 2s var(--custom-easing) forwards 2s;
 }
 
-@keyframes --curtain-left-open {
+@keyframes curtain-left-open {
 0% {
     transform: translateX(0vw);
 }
@@ -53,7 +58,7 @@ animation: --curtain-right-open 2s var(--custom-easing) forwards 2s;
 }
 }
 
-@keyframes --curtain-right-open {
+@keyframes curtain-right-open {
 0% {
     transform: translateX(0vw);
 }
