--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -3,17 +3,14 @@
 
 
 {% block content %}
-<div class="container">
-  <h1>De Man met de hamer</h1>
 
-  <a href="/projects">
+  {% comment %} <a href="/projects">
     <h2>Naar projecten</h2>
-  </a>
+  </a> {% endcomment %}
 
-<div class="curtain-left"></div>
-<div class="curtain-right"></div>
+ <div class="curtain-left"></div>
+ <div class="curtain-right"></div> 
 
-</div>
 <div class="peter-container">
     <img class="forehead" src="/public/images/pre-loader/peter-top.png" alt="peter's voorhoofd">
     <img class="bottomhead" src="/public/images/pre-loader/peter-bottom.png" alt="peter's onderhoofd">
@@ -27,5 +24,7 @@
         <img class="eye-white" src="/public/images/pre-loader/peter-oog-wit.png" alt="peter's oog wit uitgeknipt">
     </div>
     
+     <button id="playSoundButton">SITE BETREDEN</button>
+    <audio id="myAudio" src="welkom.mp3"></audio>
 </div>
 {% endblock %}
