--- a/client/homepage-responsiveness/hp-responsiveness.css
+++ b/client/homepage-responsiveness/hp-responsiveness.css
@@ -172,8 +172,14 @@ img {
 /* LATER WEH HALEN ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑ */
 /* -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- */
 
+
+
+:root {
+    --value: calc(var(--unitless-value) * 1%);
+}
+
 body {
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .frame {
@@ -181,9 +187,17 @@ body {
     height: 100dvh;
     width: 100vw;
     background-color: black;
+
+    perspective: 40em;
+    perspective-origin: var(--value) center;
+    transform-style: preserve-3d;
 }
 
-.frame > * {
+.frame * {
+    transform-style: preserve-3d;
+}
+
+.frame>* {
     position: absolute;
 }
 
@@ -239,20 +253,19 @@ body {
 
 .frame .repeating-cage {
     top: 80px;
-    left: 50%;
-    translate: -50%;
+    left: 0;
     z-index: 5;
     height: 300px;
     width: 100%;
     background-image: url(/public/images/images-responsiveness/repeating-cage.png);
     background-repeat: repeat-x;
+    background-position: -20% 0;
     background-size: 1150px;
 }
 
 .frame .repeating-roof {
     top: 0;
-    left: 50%;
-    translate: -50%;
+    left: 0;
     z-index: 1;
     background-image: url(/public/images/images-responsiveness/repeating-roof.png);
     background-repeat: repeat;
@@ -271,15 +284,15 @@ body {
     height: 80px;
 }
 
-.frame .repeating-floor .prop-container {
+.frame .prop-container {
     position: absolute;
-    top: 70px;
-    left: 50%;
-    translate: -50% -100%;
+    bottom: 10px;
+    right: 22%;
     height: 400px;
+    z-index: 100;
 }
 
-.frame .repeating-floor h2 {
+.frame .prop-container h2 {
     position: absolute;
     top: 100px;
     left: -50px;
@@ -295,14 +308,14 @@ body {
     filter: drop-shadow(0 4px 10px #000);
 }
 
-.frame .repeating-floor .prop-container:hover h2 {
+.frame .prop-container:hover h2 {
     top: 20px;
     opacity: 1;
     scale: 1;
-    left: -160px;
+    left: -180px;
 }
 
-.frame .repeating-floor .prop-container .props {
+.frame .prop-container .props {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -310,15 +323,23 @@ body {
     height: 400px;
 }
 
-.frame .repeating-floor .prop-container .props:hover {
+.frame .prop-container .props:hover {
     filter: url("#border-text");
 }
 
-.frame .repeating-floor .prop-container .prop-shadows {
+.frame .prop-container .prop-shadows {
     position: absolute;
     top: 92%;
     translate: -32.5% -50%;
     height: 160px;
+}
+
+.layer-1 {
+    translate: 0 0 20px;
+}
+
+.layer-2 {
+    translate: 0 0 10px;
 }
 
 
@@ -334,4 +355,12 @@ body {
     position: absolute;
     white-space: nowrap;
     width: 1px;
+}
+
+
+input {
+    position: absolute;
+    bottom: 50%;
+    left: 50%;
+    translate: -50% -50%;
   }
